# test-case

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  TODO.md  build.rs  publish.sh  renovate.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: test.yml
acceptance_tests/async/: Cargo.toml
acceptance_tests/async/src/: lib.rs
acceptance_tests/async_tests/: Cargo.toml
acceptance_tests/async_tests/src/: lib.rs
acceptance_tests/basic/: Cargo.toml
acceptance_tests/basic/src/: lib.rs
acceptance_tests/hamcrest_assertions/: Cargo.toml
acceptance_tests/hamcrest_assertions/src/: lib.rs
acceptance_tests/result/: Cargo.toml
acceptance_tests/result/src/: lib.rs
acceptance_tests/return_check/: Cargo.toml
acceptance_tests/return_check/src/: lib.rs
acceptance_tests/test_item_reuse/: Cargo.toml
acceptance_tests/test_item_reuse/src/: lib.rs  main.rs
crates/test-case/: Cargo.toml
crates/test-case-core/: Cargo.toml
crates/test-case-core/src/: comment.rs  complex_expr.rs  expr.rs  lib.rs  modifier.rs  test_case.rs  test_matrix.rs  utils.rs
crates/test-case-core/src/test_matrix/: matrix_product.rs  mod.rs
crates/test-case-macros/: Cargo.toml
crates/test-case-macros/src/: assert_override.rs  complex_expr.rs  expr.rs  for_each.rs  lib.rs  modifier.rs  test_case.rs
crates/test-case-macros/src/test_case/: comment.rs  expr.rs  mod.rs  modifier.rs
crates/test-case-macros/src/test_case/complex_expr/: almost_equal.rs  compare_to.rs  contains.rs  contains_in_order.rs  count.rs  empty.rs  len.rs  logic.rs  mod.rs  path.rs  regex.rs
scripts/: force-msrv-toolchain.sh  publish.sh  review.sh  test_all.sh
src/: comment.rs  complex_expr.rs  expr.rs  lib.rs  modifier.rs  parented_test_case.rs  prelude.rs  test_case.rs  utils.rs
src/expected/: hamcrest_case.rs  mod.rs  panic_case.rs
src/test_case/: gen_test_cases.rs  mod.rs  test_case_suit.rs
src/utils/: escape_ident.rs  keywords.rs  mod.rs  predicates.rs  token_trees_to_string.rs
tests/: acceptance_tests.rs  integration_tests.rs  test_cases.rs
tests/acceptance_cases/allow_stays_on_fn/: Cargo.toml
tests/acceptance_cases/basic/: Cargo.toml
tests/acceptance_cases/cases_can_be_declared_on_async_methods/: Cargo.toml
tests/acceptance_cases/cases_can_be_declared_on_async_methods/src/: lib.rs
tests/acceptance_cases/cases_can_be_declared_on_non_test_items/: Cargo.toml
tests/acceptance_cases/cases_can_be_ignored/: Cargo.toml
tests/acceptance_cases/cases_can_be_ignored/src/: lib.rs
tests/acceptance_cases/cases_can_override_default_assert_macros/: Cargo.toml
tests/acceptance_cases/cases_can_panic/: Cargo.toml
tests/acceptance_cases/cases_can_panic/src/: lib.rs
tests/acceptance_cases/cases_can_return_result/: Cargo.toml
tests/acceptance_cases/cases_can_use_regex/: Cargo.toml
tests/acceptance_cases/cases_for_each_file/: Cargo.toml
tests/acceptance_cases/cases_for_each_file/src/: lib.rs
tests/acceptance_cases/cases_support_basic_features/: Cargo.toml
tests/acceptance_cases/cases_support_basic_features/src/: lib.rs
tests/acceptance_cases/cases_support_complex_assertions/: Cargo.toml
tests/acceptance_cases/cases_support_complex_assertions/src/: lib.rs
tests/acceptance_cases/cases_support_generics/: Cargo.toml
tests/acceptance_cases/cases_support_generics/src/: lib.rs
tests/acceptance_cases/cases_support_keyword_using/: Cargo.toml
tests/acceptance_cases/cases_support_keyword_using/src/: lib.rs
tests/acceptance_cases/cases_support_keyword_with/: Cargo.toml
tests/acceptance_cases/cases_support_keyword_with/src/: lib.rs
tests/acceptance_cases/cases_support_multiple_calling_methods/: Cargo.toml
tests/acceptance_cases/cases_support_multiple_calling_methods/src/: lib.rs
tests/acceptance_cases/cases_support_pattern_matching/: Cargo.toml
tests/acceptance_cases/cases_support_pattern_matching/src/: lib.rs
tests/acceptance_cases/features_produce_human_readable_errors/: Cargo.toml
tests/acceptance_cases/matrices_compilation_errors/: Cargo.toml
tests/acceptance_cases/matrices_compilation_errors/src/: lib.rs
tests/acceptance_cases/matrices_support_basic_features/: Cargo.toml
tests/acceptance_cases/matrices_support_basic_features/src/: lib.rs
tests/acceptance_cases/result/: Cargo.toml
tests/acceptance_cases/test_item_reuse/: Cargo.toml
tests/integration_test_cases/async_tests/: Cargo.toml
tests/snapshots/: acceptance__acceptance::runs_all_tests.snap  acceptance__acceptance__basic.snap  acceptance__acceptance__hamcrest_assertions.snap  acceptance__acceptance__r#async.snap  acceptance__basic.snap  acceptance__hamcrest_assertions.snap  acceptance__r#async.snap  acceptance__runs_all_tests.snap
tests/snapshots/rust-1.41.0/: acceptance__acceptance__async_tests.snap  acceptance__acceptance__basic.snap
tests/snapshots/rust-1.49.0/: acceptance__acceptance__basic.snap  acceptance__acceptance__item_reuse.snap  acceptance__acceptance__item_reuse_run.snap  acceptance__acceptance__result.snap  acceptance__cases_can_be_declared_on_async_methods.snap  acceptance__cases_can_be_declared_on_non_test_items.snap  acceptance__cases_can_be_ignored.snap  acceptance__cases_can_override_default_assert_macros.snap  acceptance__cases_can_override_default_assert_macros_partial.snap  acceptance__cases_can_panic.snap  acceptance__cases_can_return_result.snap  acceptance__cases_can_use_regex.snap  acceptance__cases_for_each_file.snap  acceptance__cases_support_basic_features.snap  acceptance__cases_support_complex_assertions.snap  acceptance__cases_support_generics.snap  acceptance__cases_support_keyword_using.snap  acceptance__cases_support_keyword_with.snap  acceptance__cases_support_multiple_calling_methods.snap  acceptance__cases_support_pattern_matching.snap  acceptance__features_produce_human_readable_errors.snap  acceptance__item_reuse_run.snap  cases_can_be_declared_on_async_methods.snap  cases_can_be_declared_on_non_test_items.snap  cases_can_be_ignored.snap  cases_can_panic.snap  cases_can_return_result.snap  cases_can_use_regex.snap  (+12 more)
(+86 files in other folders)
