[package]
name          = "test-case"
version       = "1.2.1"
edition       = "2018"
authors       = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>", "Wojciech Polak <frondeus@gmail.com>", "Łukasz Biel <lukasz.p.biel@gmail.com>"]
description   = "Provides #[test_case(...)] procedural macro attribute for generating parametrized test cases easily"
keywords      = ["test", "case", "tests", "unit", "testing"]
categories    = ["development-tools", "development-tools::testing"]
readme        = "README.md"
license       = "MIT"
repository    = "https://github.com/frondeus/test-case"
documentation = "https://docs.rs/test-case"
exclude       = ["tests/snapshots/**/*"]
build         = "build.rs"

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest    = false
proc-macro = true
path       = "src/lib.rs"

[dependencies]
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = { version = "1.0.24", features = [] }
cfg-if = "1.0.0"
proc-macro-error = "1.0.4"

[build-dependencies]
version_check = "0.9.2"

[dev-dependencies]
insta = "1.7.0"
lazy_static = "1.4.0"
itertools = "0.10.0"

[[test]]
name = "acceptance"
path = "tests/acceptance_tests.rs"

[features]
default = []
hamcrest_assertions = []
