[package]
name          = "test-case"
version       = "2.0.0-rc1"
edition       = "2018"
authors       = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>", "Wojciech Polak <frondeus@gmail.com>", "Łukasz Biel <lukasz.p.biel@gmail.com>"]
description   = "Provides #[test_case(...)] procedural macro attribute for generating parametrized test cases easily"
keywords      = ["test", "case", "tests", "unit", "testing"]
categories    = ["development-tools", "development-tools::testing"]
readme        = "README.md"
license       = "MIT"
repository    = "https://github.com/frondeus/test-case"
documentation = "https://docs.rs/test-case"
exclude       = ["tests/snapshots/**/*"]
build         = "build.rs"

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest    = false
proc-macro = true
path       = "src/lib.rs"

[dependencies]
cfg-if           = "1.0"
proc-macro2      = { version = "1.0", features = [] }
proc-macro-error = "1.0"
quote            = "1.0"
syn              = { version = "1.0", features = ["full", "extra-traits"] }

[build-dependencies]
version_check = "0.9"

[dev-dependencies]
insta       = "1.8"
itertools   = "0.10"
lazy_static = "1.4"

[[test]]
name = "acceptance"
path = "tests/acceptance_tests.rs"

[features]
default = []
hamcrest_assertions = []
