[package]
name          = "test-case"
version       = "3.3.1"
edition       = "2021"
authors       = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>", "Wojciech Polak <frondeus@gmail.com>", "Łukasz Biel <lukasz.p.biel@gmail.com>"]
description   = "Provides #[test_case(...)] procedural macro attribute for generating parametrized test cases easily"
keywords      = ["test", "case", "tests", "unit", "testing"]
categories    = ["development-tools", "development-tools::testing"]
readme        = "README.md"
license       = "MIT"
repository    = "https://github.com/frondeus/test-case"
documentation = "https://docs.rs/test-case"
exclude       = ["tests/snapshots/**/*"]
rust-version  = "1.63"

[features]
with-regex = ["regex", "test-case-macros/with-regex"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest    = false
path       = "src/lib.rs"

[dependencies]
test-case-macros = { version = "3.2.1", path = "crates/test-case-macros", default-features = false }
regex = { version = "1.5", optional = true }

[dev-dependencies]
insta           = "1.12"
itertools       = "0.11"
regex           = "1.5"

[workspace]
members = ["crates/*"]

[[test]]
name = "acceptance"
path = "tests/acceptance_tests.rs"
