[package]
name = "hamcrest_assertions"
version = "0.1.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-case = { path = "../../", features = ["hamcrest_assertions"] }
hamcrest2 = "0.3.0"
