[package]
name          = "test-case-core"
version       = "3.3.1"
edition       = "2021"
authors       = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>", "Wojciech Polak <frondeus@gmail.com>", "Łukasz Biel <lukasz.p.biel@gmail.com>"]
description   = "Provides core functionality for parsing #[test_case(...)] procedural macro attribute for generating parametrized test cases easily"
keywords      = ["test", "case", "tests", "unit", "testing"]
categories    = ["development-tools", "development-tools::testing"]
readme        = "../../README.md"
license       = "MIT"
repository    = "https://github.com/frondeus/test-case"
documentation = "https://docs.rs/test-case"

[features]
with-regex = []

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest    = false
path       = "src/lib.rs"

[dependencies]
cfg-if      = "1.0"
proc-macro2 = { version = "1.0", features = [] }
quote       = "1.0"
syn         = { version = "2.0", features = ["full", "extra-traits"] }
