###
# Ensure that tests can be ran in tandem with `#[tokio::test]` and `#[async_std::test]`.
###

[package]
name = "async_tests"
version = "0.1.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
edition = "2021"

[lib]
name = "async"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
test-case = { path = "../../../" }
tokio = { version = "=1.32.0", features = [ "macros", "rt" ] }
async-std = { version = "=1.12.0", features = ["attributes"] }
async-attributes = "=1.1.2"
once_cell = "=1.18.0"

[workspace]
