[package]
name = "cases_for_each_file"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cases_for_each_file"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
test-case = { path = "../../../", features = ["for-each-file"] }

[workspace]
