###
# Ensure that cases can be ran against test functions with generic parameters.
###

[package]
name = "cases_support_generics"
version = "0.1.0"
edition = "2021"

[lib]
name = "cases_support_generics"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
test-case = { path = "../../../" }

[workspace]
