###
# Ensure that `using` syntax works.
###

[package]
name = "cases_support_keyword_using"
version = "0.1.0"
edition = "2021"

[lib]
name = "cases_support_keyword_using"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
test-case = { path = "../../../" }
pretty_assertions = "=1.2.1"

[workspace]
