[package]
name = "cases_support_multiple_calling_methods"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cases_support_multiple_calling_methods"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
test-case = { path = "../../../" }

[workspace]
