###
# Ensure that all aliases of test case macro are usable.
###

[package]
name = "cases_support_multiple_calling_methods"
version = "0.1.0"
edition = "2021"

[lib]
name = "cases_support_multiple_calling_methods"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
test-case = { path = "../../../" }

[workspace]
