###
# Ensure that matrix syntax produces human readable errors.
###

[package]
name = "matrices_compilation_errors"
version = "0.1.0"
edition = "2021"

[dependencies]

[lib]
name = "matrices_compilation_errors"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
test-case = { path = "../../../" }

[workspace]
